# fast-hr

./: .env.example  .gitignore  LOCAL_LLM_SETUP.md  Makefile  README.md  TESTING.md  pyproject.toml  render.yaml
.github/workflows/: adversarial-tests.yml  canary.yml  ci.yml  fuzzer.yml
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  admin.py  careers.py  fuzzer.py  health.py  hr.py  screenings.py  tasks.py
app/clients/: __init__.py  anthropic_client.py  google_client.py  langfuse_client.py  langsmith_client.py  llm_factory.py  noop_client.py  observability_factory.py  openai_client.py  phoenix_client.py
app/core/: exceptions.py  logging.py  middleware.py  redis.py
app/models/: __init__.py  fuzzer.py  screening.py
app/repositories/: __init__.py  application.py  job.py  screening.py
app/schemas/: __init__.py  fuzzer.py  hr.py  job.py  screening.py
app/services/: __init__.py  dashboard.py  email.py  fuzzer.py  resume_parser.py  screening.py
app/tasks/: __init__.py  celery.py
app/utils/: json_mode.py  observability.py
canary/: baseline_scores.json  thresholds.json
canary/candidates/: 001_simple_junior_dev.json  002_senior_with_gaps.json  003_career_switcher.json  004_overqualified.json  005_non_technical_pm.json  006_full_stack_generalist.json  007_devops_specialist.json  008_fresh_graduate.json  009_remote_worker.json  010_domain_expert.json  011_self_taught.json  012_management_track.json  013_short_tenure.json  014_niche_specialist.json  015_startup_veteran.json  016_academic_researcher.json  017_contractor.json  018_legacy_systems.json  019_adversarial_date_overlap.json  020_adversarial_phantom_company.json
data/adversarial/: 001_skill_inflation.json  002_phantom_company.json  003_backdated_title.json  004_degree_mismatch.json  005_location_lie.json  006_salary_inflation.json  007_reference_fake.json  008_date_overlap.json  009_skill_inflation.json  010_phantom_company.json  011_backdated_title.json  012_degree_mismatch.json  013_location_lie.json  014_salary_inflation.json  015_reference_fake.json  016_date_overlap.json  017_skill_inflation.json  018_phantom_company.json  019_backdated_title.json  020_degree_mismatch.json  021_location_lie.json  022_salary_inflation.json  023_reference_fake.json  024_date_overlap.json  025_skill_inflation.json  026_phantom_company.json  027_backdated_title.json  028_degree_mismatch.json  029_location_lie.json  030_salary_inflation.json  031_reference_fake.json  032_date_overlap.json  033_skill_inflation.json  034_phantom_company.json  035_backdated_title.json  036_degree_mismatch.json  037_location_lie.json  038_salary_inflation.json  039_reference_fake.json  040_date_overlap.json  (+10 more)
docker/: Dockerfile  Dockerfile.prod  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AdminApplicationDetail.tsx  AdminApplications.tsx  AdminCandidates.tsx  AdminDashboard.tsx  AdminJobs.tsx  ApplicationStatus.tsx  Apply.tsx  Batch.tsx  Careers.tsx  Compare.tsx  Dashboard.tsx  Fuzzer.tsx  HrDashboard.tsx  JobDetail.tsx  Report.tsx  Screenings.tsx  Tasks.tsx
scripts/: canary_run.py  check_drift.py  generate_tests_from_errors.py  pull_adversarial_tests.py  run_fuzzer.py  start_redis.sh
tests/: conftest.py
tests/integration/: test_recent_endpoints.py  test_screenings_api.py
tests/unit/: test_llm_factory.py  test_observability_factory.py  test_screening_schema.py
