[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracepilot"
version = "0.1.0"
description = "AI Screening Observability Platform — production-minded LLM engineering with Langfuse"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [{ name = "TracePilot" }]
license = { text = "MIT" }
keywords = ["fastapi", "langfuse", "llm", "observability", "screening"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "langfuse>=2.59.7",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.12",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]
anthropic = [
    "anthropic>=0.34.0",
]
google = [
    "google-generativeai>=0.7.0",
]
langsmith = [
    "langsmith>=0.1.0",
]
phoenix = [
    "arize-phoenix>=3.0.0; python_version < '3.15'",
]
all = [
    "anthropic>=0.34.0",
    "google-generativeai>=0.7.0",
    "langsmith>=0.1.0",
    "arize-phoenix>=3.0.0; python_version < '3.15'",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html --strict-markers"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
